* growable_forms do not use inline javascript in `href` attribute
* removed unsafe `eval()` stuff
* make it compatible with php 8
* cleanup of old obsoleted stuff
* When logging a request, log also request method
* Make sure that `num_rows`, `act_row` and `showed_rows` properties of data layer are integers

Version 2.2.3
==============

* Log when executed from CLI
* Possibility to render optgroups of select clickable (use <option> tag for them)
* Possibility to render options outside optgroup when optgroups are used
* check_netmask() and check_network_address() functions support hex format of netmask
* when removing a row of growable forms, remove also hidden form field containing ordering number
* Enhanced configuration for logger
* Fix sql formating of float strings
* RecursiveMkdir() function report $dirname on error
* Fix 'content-type' header returned by get_js.php script
* Adding config option for globaly set cookie parameters
* Allow to globaly configure initial values of OohForm class options
* Ability to set `generate_ids_by_names` per element of OohForm

Version 2.2.2
==============

* Set language of the page in <html> tag

Version 2.2.1
==============

* Log new requests a bit later. Logging function might require access e.g. session

Version 2.2.0
==============

* Fix XSS vulnerability in get_js and get_css files
* Adding add_extrahtml() method to Ooh form elements
* Reinitialize page_controller->session variable when session is reopened
* Adding session property to apu_base_class
* Adding sw_log_exception() function
* Fix PHP crash in handler of PearErrorException
* Improving general exception handling and logging failed SQL queries

Version 2.1.0
==============

* Ability to define custom HTML headers in page attributes
* Fixing TYPO in name of page_controller class
* Upgrading bundled Smarty to version 3.1.33
* Adding ability to use PDO as DB abstraction layer
* Use better functions for getting random numbers for UUIDs (with PHP7)